<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.budgethelper.Spendings">

    <TextView
        android:id="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add a purchase"
        android:textSize="30dp"
        android:textColor="#0101DF"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="15"
        android:id="@+id/amount"
        android:layout_marginTop="41dp"
        android:layout_below="@id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:id="@+id/store"
        android:layout_below="@+id/amount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="15"
        android:id="@+id/dateInput"
        android:layout_below="@+id/store"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/saveButton"
        android:layout_alignEnd="@+id/saveButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Today"
        android:id="@+id/spendingdate"
        android:layout_below="@+id/store"
        android:layout_toRightOf="@+id/dateInput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_below="@+id/spendingdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp" />


</RelativeLayout>
